Implement for pizza menu

--- a/test.html
+++ b/test.html
@@ -6,14 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
-    <title>Document</title>
+    <title>Project pizza</title>
 </head>
-<div>
-    name
-</div>
 
 <body>
+    <div>
+        <div class="wrapper">
 
+            <div class="imege-conteiner">
+
+                <div class="triangle_conteiner">
+                    <img src="./img/image 3.png" alt="" class="image">
+                    <div class="cover"></div>
+                </div>
+            </div>
+            <div class="card_container">
+                <h3>
+                    Margherita Pizza
+                </h3>
+                <div class="made">
+                    <p>
+                        Made with San Marzano tomatoes, mozzarella cheese, and fresh basil.
+                    </p>
+                </div>
+                <h4>
+                    $35.00
+                </h4>
+                <button class="regular">Regular</button>
+                <button class="Cart">ADD TO CART</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
